# bewise-test-task1

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py  settings.py
app/api/: handlers.py  questions_handler.py  schemas.py
app/api/action/: question.py  question_utils.py
app/database/: create_table.py  dao.py  engine.py
app/database/db_models/: question.py
migrations/: env.py
migrations/versions/: bbff37a0888f_init_db.py
